--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.5.0",
     "es6-promisify": "^5.0.0",
     "find-cache-dir": "^1.0.0",
     "lodash": "^4.17.4",
+    "memory-fs": "^0.4.1",
     "mkdirp": "^0.5.1",
     "path-to-regexp": "^1.7.0",
     "rmdir": "^1.2.0",
