--- a/package.json
+++ b/package.json
@@ -2,15 +2,18 @@
   "name": "dll-creator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "babel-node src/index.js --inspect",
+    "test": "tape -r babel-register specs/**/*.js | faucet",
+    "test:inspect": "babel-node --inspect ./node_modules/.bin/tape specs/**/*.js",
+    "build": "babel src --out-dir lib",
+    "prepublish": "npm build"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
-    "es6-promisify": "^5.0.0",
     "find-cache-dir": "^1.0.0",
     "lodash": "^4.17.4",
     "memory-fs": "^0.4.1",
@@ -20,7 +23,24 @@
     "webpack": "^3.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-env": "^1.5.2",
     "chalk": "^1.1.3",
-    "del": "^3.0.0"
+    "del": "^3.0.0",
+    "faucet": "^0.0.1",
+    "tape": "^4.7.0"
+  },
+  "babel": {
+    "presets": [
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
+        }
+      ]
+    ]
   }
 }
