--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "mkdirp": "^0.5.1",
     "path-to-regexp": "^1.7.0",
     "rmdir": "^1.2.0",
-    "webpack": "^3.0.0"
+    "webpack": "^3.0.0",
+    "del": "^3.0.0",
+    "chalk": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
-    "chalk": "^1.1.3",
-    "del": "^3.0.0",
     "faucet": "^0.0.1",
     "tape": "^4.7.0"
   },
