--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "tape -r babel-register specs/**/*.js | faucet",
     "test:inspect": "babel-node --inspect ./node_modules/.bin/tape specs/**/*.js",
-    "build": "babel src --out-dir lib",
+    "build": "del ./lib && babel src --out-dir lib",
     "build:watch": "babel src --out-dir lib --watch",
     "prepublish": "npm run build"
   },
@@ -14,20 +14,21 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "chalk": "^1.1.3",
+    "del": "^3.0.0",
     "find-cache-dir": "^1.0.0",
     "lodash": "^4.17.4",
     "memory-fs": "^0.4.1",
     "mkdirp": "^0.5.1",
     "path-to-regexp": "^1.7.0",
     "rmdir": "^1.2.0",
-    "webpack": "^3.0.0",
-    "del": "^3.0.0",
-    "chalk": "^1.1.3"
+    "webpack": "^3.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
+    "del-cli": "^1.1.0",
     "faucet": "^0.0.1",
     "tape": "^4.7.0"
   },
