--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
+    "babel-preset-stage-3": "^6.24.1",
     "del-cli": "^1.1.0",
     "faucet": "^0.0.1",
+    "recursive-readdir": "^2.2.1",
+    "spy": "^1.0.0",
     "tape": "^4.7.0"
   },
   "babel": {
     "presets": [
+      "stage-3",
       [
         "env",
         {
