--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "tape -r babel-register specs/**/*.js | faucet",
     "test:inspect": "babel-node --inspect ./node_modules/.bin/tape specs/**/*.js",
-    "build": "del ./lib && babel src --out-dir lib",
+    "build": "del-cli ./lib && babel src --out-dir lib",
     "build:watch": "babel src --out-dir lib --watch",
     "prepublishOnly": "npm run build"
   },
