build: Set babel target to node 4 instead of current

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "env",
         {
           "targets": {
-            "node": "current"
+            "node": "4"
           }
         }
       ]
