--- a/examples/performance/package.json
+++ b/examples/performance/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config ./webpack.config.js"
   },
   "devDependencies": {
-    "autodll-webpack-plugin": "^0.0.5",
+    "autodll-webpack-plugin": "latest",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.5.2",
