--- a/examples/recommended/package.json
+++ b/examples/recommended/package.json
@@ -8,7 +8,7 @@
     "build": "webpack --config ./webpack.config.js"
   },
   "devDependencies": {
-    "autodll-webpack-plugin": "^0.0.5",
+    "autodll-webpack-plugin": "latest",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0"
   },
