--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "del": "^3.0.0",
     "find-cache-dir": "^1.0.0",
     "lodash": "^4.17.4",
+    "make-dir": "^1.0.0",
     "memory-fs": "^0.4.1",
-    "mkdirp": "^0.5.1",
     "webpack": "^3.0.0"
   },
   "devDependencies": {
