fix travis failure because of babel-register

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "lib/index.js",
   "scripts": {
-    "test": "tape -r babel-register specs/**/*.spec.js | faucet",
+    "test": "babel-node ./node_modules/.bin/tape specs/**/*.spec.js | faucet",
     "test:inspect": "babel-node --inspect ./node_modules/.bin/tape specs/**/*.spec.js",
     "build": "del-cli ./lib && babel src --out-dir lib",
     "build:watch": "babel src --out-dir lib --watch",
