--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint-staged": "lint-staged",
     "test": "babel-node ./node_modules/.bin/tape specs/**/*.spec.js | faucet",
     "test:inspect": "babel-node --inspect ./node_modules/.bin/tape specs/**/*.spec.js",
-    "build": "del-cli ./lib && babel src --out-dir lib",
-    "build:watch": "babel src --out-dir lib --watch",
+    "cleanup": "del-cli ./lib",
+    "build": "npm run cleanup && babel src --out-dir lib",
+    "build:watch": "npm run cleanup && babel src --out-dir lib --watch",
     "prepublishOnly": "npm run build"
   },
   "author": "Asaf Katz",
@@ -57,14 +58,17 @@
   "babel": {
     "presets": [
       "stage-3",
-      [
-        "env",
-        {
-          "targets": {
-            "node": "4"
-          }
-        }
-      ]
-    ]
+      ["env", { "targets": { "node": "4" } }]
+    ],
+    
+    "env": {
+      "debug": {
+        "sourceMaps": "inline",
+        "presets": [
+          "stage-3",
+          ["env", { "targets": { "node": "current" } }]
+        ]
+      }
+    }
   }
 }
