set webpack as peerDependencies

--- a/examples/recommended/package.json
+++ b/examples/recommended/package.json
@@ -8,12 +8,12 @@
     "build": "webpack --config ./webpack.config.js"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^2.29.0",
     "autodll-webpack-plugin": "latest",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.0",
+    "webpack": "^3.1.0"
   },
   "dependencies": {
-    "html-webpack-plugin": "^2.29.0",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
