fix: Fix test script on windows

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint src specs",
     "lint:fix": "npm run lint -- --fix",
     "lint-staged": "lint-staged",
-    "test": "babel-node ./node_modules/.bin/tape specs/**/*.spec.js | faucet",
+    "test": "tape -r babel-register specs/**/*.spec.js | faucet",
     "test:inspect": "babel-node --inspect ./node_modules/.bin/tape specs/**/*.spec.js",
     "cleanup": "del-cli ./lib",
     "build": "npm run cleanup && babel src --out-dir lib",
@@ -50,6 +50,7 @@
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.24.1",
     "del-cli": "^1.1.0",
     "eslint": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
