--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "cleanup": "del-cli ./lib",
     "build": "npm run cleanup && babel src --out-dir lib",
     "build:watch": "npm run cleanup && babel src --out-dir lib --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "precommit": "npm run build && lint-staged"
   },
   "author": "Asaf Katz",
   "license": "ISC",
@@ -22,18 +23,12 @@
   ],
   "lint-staged": {
     "src/**/*.js": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ],
     "specs/**/*.js": [
-      "eslint --fix",
-      "git add"
+      "eslint --fix"
     ]
   },
-  "pre-commit": [
-    "lint-staged",
-    "test"
-  ],
   "peerDependencies": {
     "webpack": ">= 2.0.0"
   },
@@ -56,6 +51,7 @@
     "eslint": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
     "faucet": "^0.0.1",
+    "husky": "^0.14.3",
     "lint-staged": "^4.0.0",
     "pre-commit": "^1.2.2",
     "recursive-readdir": "^2.2.1",
