--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "npm run cleanup && babel src --out-dir lib",
     "build:watch": "npm run cleanup && babel src --out-dir lib --watch",
     "prepublishOnly": "npm run build",
-    "precommit": "del-cli yarn.lock && npm run build && lint-staged"
+    "precommit": "npm run cleanup && del-cli yarn.lock && npm run build && lint-staged && npm run test"
   },
   "author": "Asaf Katz",
   "license": "ISC",
