--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint src specs",
     "lint:fix": "npm run lint -- --fix",
     "lint-staged": "lint-staged",
-    "test": "ava specs/**/*.spec.js && ava --serial specs/**/*.spec-serial.js",
+    "test:unit": "ava specs/**/*.spec.js",
+    "test:integration": "ava --serial specs/**/*.spec-serial.js",
+    "test": "npm run test:unit && npm run test:integration",
     "test:inspect": "node --inspect node_modules/ava/profile.js",
     "cleanup": "del-cli ./lib",
     "build": "npm run cleanup && babel src --out-dir lib",
@@ -40,7 +42,8 @@
     "find-cache-dir": "^1.0.0",
     "lodash": "^4.17.4",
     "make-dir": "^1.0.0",
-    "memory-fs": "^0.4.1"
+    "memory-fs": "^0.4.1",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
     "ava": "^0.21.0",
