--- a/package.json
+++ b/package.json
@@ -56,10 +56,12 @@
     "eslint": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
     "faucet": "^0.0.1",
+    "html-webpack-plugin": "^2.29.0",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.0",
     "recursive-readdir": "^2.2.1",
     "spy": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.2.0"
   },
   "babel": {
@@ -92,9 +94,7 @@
     }
   },
   "ava": {
-    "files": [
-      "specs/getInstanceIndex.spec.js"
-    ],
+    "files": [],
     "source": [
       "src/**/*.js"
     ],
