--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "npm run cleanup && babel src --out-dir lib",
     "build:watch": "npm run cleanup && babel src --out-dir lib --watch",
     "prepublishOnly": "npm run build",
-    "precommit": "del-cli yarn.lock && git add yarn.lock && lint-staged && npm run test"
+    "precommit": "del-cli yarn.lock && lint-staged && npm run test"
   },
   "files": [
     "src",
