--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "lint-staged": "^4.0.0",
     "prettier-eslint-cli": "4.4.0",
     "recursive-readdir": "^2.2.1",
+    "slash": "^1.0.0",
     "spy": "^1.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
     "webpack": "^3.2.0",
