--- a/examples/inherit/package.json
+++ b/examples/inherit/package.json
@@ -8,13 +8,17 @@
     "build": "webpack --config ./webpack.config.js"
   },
   "devDependencies": {
-    "autodll-webpack-plugin": "latest",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.29.0",
+    "style-loader": "^0.18.2",
     "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
     "webpack": "^3.1.0",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "2.5.0"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
