--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "webpack": ">= 2.0.0"
   },
   "dependencies": {
-    "bluebird": "^3.5.0",
     "del": "^3.0.0",
     "find-cache-dir": "^1.0.0",
     "lodash": "^4.17.4",
@@ -46,14 +45,17 @@
   },
   "devDependencies": {
     "ava": "^0.21.0",
+    "axios": "^0.16.2",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.24.1",
+    "bluebird": "^3.5.0",
     "del-cli": "^1.1.0",
     "eslint": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
+    "expect": "^1.20.2",
     "faucet": "^0.0.1",
     "html-webpack-plugin": "^2.29.0",
     "husky": "^0.14.3",
@@ -61,7 +63,8 @@
     "recursive-readdir": "^2.2.1",
     "spy": "^1.0.0",
     "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.2.0"
+    "webpack": "^3.2.0",
+    "webpack-dev-server": "^2.7.1"
   },
   "babel": {
     "presets": [
