--- a/examples/performance/package.json
+++ b/examples/performance/package.json
@@ -26,6 +26,7 @@
     "howler": "^2.0.4",
     "html-webpack-plugin": "^2.29.0",
     "immutable": "^3.8.1",
+    "loader-utils": "^1.1.0",
     "moment": "^2.18.1",
     "pixi.js": "^4.5.3",
     "polished": "^1.2.1",
