--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,6 +35,19 @@
       ]
     },
     {
+      "login": "Nargonath",
+      "name": "Jonas Pauthier",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/583657?v=4",
+      "profile": "https://twitter.com/jonas_pauthier",
+      "contributions": [
+        "ideas",
+        "tool",
+        "question",
+        "doc",
+        "bug"
+      ]
+    },
+    {
       "login": "viankakrisna",
       "name": "Ade Viankakrisna Fadlil",
       "avatar_url": "https://avatars1.githubusercontent.com/u/9636410?v=4",
