Add script for installing fixture deps
- Refactor fixture folders resolution to `getFixtures.js`.
- Setup package.json script `install:fixturedeps` to run
  `scripts/installFixtureDeps`.
- Update travis and appveyor config to `npm run install:fixturedeps`.
- Run travis build only for master branch and pull requests.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,7 @@ install:
   - ps: Install-Product node $env:nodejs_version
   # install modules
   - npm install
+  - npm run install:fixturedeps
 
 # Post-install test scripts.
 test_script:
