--- a/specs/fixtures/basic/package.json
+++ b/specs/fixtures/basic/package.json
@@ -8,17 +8,9 @@
   },
   "devDependencies": {
     "ava": "^0.21.0",
-    "axios": "^0.16.2",
-    "bluebird": "^3.5.0",
-    "del": "^3.0.0",
-    "expect": "^1.20.2",
-    "find-cache-dir": "^1.0.0",
     "html-webpack-plugin": "^2.29.0",
-    "lodash": "^4.17.4",
-    "read-pkg": "^2.0.0",
     "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
-    "write-pkg": "^3.1.0"
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "moment": "^2.18.1",
