feat: first draft

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "make-dir": "^1.0.0",
     "memory-fs": "^0.4.1",
     "read-pkg": "^2.0.0",
+    "tapable": "^1.0.0",
     "webpack-merge": "^4.1.0",
     "webpack-sources": "^1.0.1"
   },
@@ -55,16 +56,17 @@
     "del-cli": "^1.1.0",
     "eslint": "^4.1.1",
     "eslint-config-prettier": "2.7.0",
-    "html-webpack-plugin": "^2.29.0",
+    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
+    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.0",
     "prettier-eslint-cli": "4.4.0",
     "recursive-readdir": "^2.2.1",
     "slash": "^1.0.0",
     "spy": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.2.0",
-    "webpack-dev-server": "^2.7.1",
+    "uglifyjs-webpack-plugin": "^1.2.0",
+    "webpack": "^4.0.0-beta.2",
+    "webpack-dev-server": "^3.0.0-beta.2",
     "write-pkg": "^3.1.0"
   },
   "babel": {
