--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -7,7 +7,7 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "webpack": "^4.0.0-beta.2",
+    "webpack": "^4.0.0",
     "webpack-cli": "^2.0.6"
   },
   "dependencies": {
