--- a/examples/minification/package.json
+++ b/examples/minification/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "uglifyjs-webpack-plugin": "^1.2.1",
-    "webpack": "^4.0.0-beta.2",
+    "webpack": "^4.0.0",
     "webpack-cli": "^2.0.6"
   },
   "dependencies": {
