--- a/examples/performance/package.json
+++ b/examples/performance/package.json
@@ -16,9 +16,9 @@
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
-    "webpack": "^4.0.0-beta.2",
+    "webpack": "^4.0.0",
     "webpack-cli": "^2.0.6",
-    "webpack-dev-server": "^3.0.0-beta.2"
+    "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
