--- a/examples/recommended/package.json
+++ b/examples/recommended/package.json
@@ -10,9 +10,9 @@
   "devDependencies": {
     "extract-text-webpack-plugin": "^4.0.0-alpha.0",
     "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
-    "webpack": "^4.0.0-beta.2",
+    "webpack": "^4.0.0",
     "webpack-cli": "^2.0.6",
-    "webpack-dev-server": "^3.0.0-beta.2"
+    "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
     "react": "^15.6.1",
