fix: explicitly set peerDependencies to supported webpack versions

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     ]
   },
   "peerDependencies": {
-    "webpack": ">= 2.0.0"
+    "webpack": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "dependencies": {
     "bluebird": "^3.5.0",
