fix: update html-plugin, remove extract-text-plugin

--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "del-cli": "^1.1.0",
     "eslint": "^4.1.1",
     "eslint-config-prettier": "2.7.0",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "^3.0.6",
     "husky": "^0.14.3",
     "lint-staged": "^4.0.0",
     "prettier-eslint-cli": "4.4.0",
