--- a/examples/performance/package.json
+++ b/examples/performance/package.json
@@ -14,10 +14,9 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^4.1.1",
     "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "^3.0.6",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.6",
+    "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
