--- a/examples/recommended/package.json
+++ b/examples/recommended/package.json
@@ -8,10 +8,9 @@
     "build": "webpack"
   },
   "devDependencies": {
-    "extract-text-webpack-plugin": "^4.0.0-alpha.0",
-    "html-webpack-plugin": "webpack-contrib/html-webpack-plugin",
+    "html-webpack-plugin": "^3.0.6",
     "webpack": "^4.0.0",
-    "webpack-cli": "^2.0.6",
+    "webpack-cli": "^2.0.11",
     "webpack-dev-server": "^3.0.0"
   },
   "dependencies": {
