--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -35,6 +35,24 @@
       ]
     },
     {
+      "login": "mhheise",
+      "name": "Matt Heise",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/17503914?v=4",
+      "profile": "https://github.com/mhheise",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
+      "login": "faceyspacey",
+      "name": "James Gillmore",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/154732?v=4",
+      "profile": "http://twitter.com/faceyspacey",
+      "contributions": [
+        "code"
+      ]
+    },
+    {
       "login": "Nargonath",
       "name": "Jonas Pauthier",
       "avatar_url": "https://avatars1.githubusercontent.com/u/583657?v=4",
@@ -51,7 +69,7 @@
       "login": "viankakrisna",
       "name": "Ade Viankakrisna Fadlil",
       "avatar_url": "https://avatars1.githubusercontent.com/u/9636410?v=4",
-      "profile": "https://musify.id",
+      "profile": "https://github.com/viankakrisna",
       "contributions": [
         "code",
         "bug",
@@ -106,6 +124,7 @@
       "contributions": [
         "doc"
       ]
-    }
-  ]
+    },
+  ],
+  "repoType": "github"
 }
