--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -6,8 +6,7 @@
   ],
   "imageSize": 100,
   "commit": true,
-  "contributors": [
-    {
+  "contributors": [{
       "login": "asfktz",
       "name": "Asaf Katz",
       "avatar_url": "https://avatars1.githubusercontent.com/u/199747?v=4",
@@ -124,7 +123,7 @@
       "contributions": [
         "doc"
       ]
-    },
+    }
   ],
   "repoType": "github"
 }
